--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
-<!DOCTYPE html><!--  : Dimitri & Wick --><html lang="ar">
+<!DOCTYPE html>
+<!-- Designed by: Dimitri & Wick -->
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Embed  </title>
+    <title>Send Embed via Webhook</title>
     <link rel="stylesheet" href="styles.css">
-    <!--    Dimitri & Wick -->
+    <!-- Elegant design by Dimitri & Wick -->
 </head>
 <body>
     <div class="container">
-        <h1>  Embed  </h1>
-        <input type="text" id="webhook" placeholder="  Webhook">
-        <input type="text" id="title" placeholder=" ">
-        <textarea id="description" placeholder=" "></textarea>
-        <label>   Embed:</label>
+        <h1>Send Embed via Webhook</h1>
+        <input type="text" id="webhook" placeholder="Enter Webhook URL">
+        <input type="text" id="title" placeholder="Message Title">
+        <textarea id="description" placeholder="Enter Message Description"></textarea>
+        <label>Embed Border Color:</label>
         <input type="color" id="color" value="#7289da">
-        <button onclick="sendEmbed()"></button>
+        <button onclick="sendEmbed()">Send</button>
     </div>
-    <!--     Dimitri & Wick -->
+    <!-- Developed by Dimitri & Wick -->
     <script src="script.js"></script>
 </body>
 </html>
